# Blendgment

./: .gitignore  BasicBlendFile.blend  CMakeLists.txt  README.md  compile.bat  compile.sh  setup_env_linux.sh  setup_env_windows.bat  start.sh
.github/workflows/: build.yml
resources/: app_icon.rc  blendgment.desktop  create_blend.py
src/: Application.cpp  Application.h  Config.cpp  Config.h  README.md  VulkanContext.cpp  VulkanContext.h  main.cpp
src/UI/: InstalledVersion.cpp  InstalledVersion.h  PlatformPaths.cpp  PlatformPaths.h  ProjectMetadata.h  Theme.h  UIManager.cpp  UIManager.h
src/UI/modals/: AddAssetModal.cpp  AddAssetModal.h  DeleteModal.cpp  DeleteModal.h  InstallModal.cpp  InstallModal.h  NewProjectModal.cpp  NewProjectModal.h
src/UI/pages/: DashboardPage.cpp  DashboardPage.h  ProjectsPage.cpp  ProjectsPage.h  SettingsPage.cpp  SettingsPage.h  VersionsPage.cpp  VersionsPage.h
src/core/: Device.cpp  Device.h  Instance.cpp  Instance.h  Window.cpp  Window.h
src/rendering/: Renderer.cpp  Renderer.h  SwapChain.cpp  SwapChain.h
src/services/: BlenderFetcher.cpp  BlenderFetcher.h
src/utils/: Extractor.cpp  Extractor.h  SynchronousDownloader.cpp  SynchronousDownloader.h
